apps/traefik/traefik/resources/lan-allowlist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-allowlist
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - "10.0.10.0/24"
      - "10.0.30.0/24"
      - "10.0.88.0/24"
